--- a/src/styles.css
+++ b/src/styles.css
@@ -19,3 +19,15 @@ main > h1 {
   text-align: center;
   font-size: 3.5em;
 }
+
+.column {
+  float: left;
+  width: 33.33%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
