--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,8 @@
 * {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Mulish", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
 }
 
 html, body {
